--- a/HTML-4 PROJECTS.html
+++ b/HTML-4 PROJECTS.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MANAGE &verbar; HOME</title>
+    <title>MANAGE &verbar; PROJECTS</title>
 </head>
 <body>
     <header>
