Created COMMON JS FILES-1 folder in TESTING-1, added MANAGE - FONT AWESOME KIT.js in COMMON JS FILES-1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANAGE &verbar; HOME</title>
+    <!-- MANAGE - FONT AWESOME KIT -->
+    <!-- <script src="https://kit.fontawesome.com/d618e85155.js" crossorigin="anonymous"></script> -->
+    <!-- This is introduced in TESTING-1 and not to be included in online project, for online project use cdn. -->
+    <script src="COMMON JS FILES-1/MANAGE - FONT AWESOME KIT.js"></script>
+    <!-- TESTING-1 INTRODUCED: END -->
 </head>
 <body>
     <header>
