Improved index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <script src="https://kit.fontawesome.com/d618e85155.js" crossorigin="anonymous"></script> -->
     <!-- This is introduced in TESTING-1 and not to be included in online project, for online project use cdn. -->
     <script src="COMMON JS FILES-1/MANAGE - FONT AWESOME KIT.js"></script>
-    <!-- TESTING-1 INTRODUCED: END -->
+    <link rel="stylesheet" href="CSS FILES - 1/CSS-1 index.css">
 </head>
 <body>
     <header>
