ADDED MANAGE - LOGO in main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANAGE &verbar; HOME</title>
+    <link rel="icon" href="MANAGE - LOGO.svg" type="image/x-icon">
 </head>
 <body>
     
