TESTING-1: Added COMMON CSS FILES-1 folder, and CSS-1 in the CCF-1 folder, and added MANAGE-LOGO SVG, added siteicon on power pages.

--- a/HTML-3 DOCUMENTS.html
+++ b/HTML-3 DOCUMENTS.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANAGE &verbar; DOCUMENTS</title>
+    <link rel="icon" href="MANAGE - LOGO.svg" type="image/x-icon">
+    <!-- COMMON CSS FILES -1 / CSS-1 TopNavigationBar.css -->
+    <link rel="stylesheet" href="COMMON CSS FILES-1/CSS-1 TopNavigationBar.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -17,4 +22,5 @@
         </nav>
     </header>
 </body>
+
 </html>
