--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- THE HOME PAGE OF MANAGE CREATED ON 31 JULY 2024 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,16 @@
     <!-- <script src="https://kit.fontawesome.com/d618e85155.js" crossorigin="anonymous"></script> -->
     <!-- This is introduced in TESTING-1 and not to be included in online project, for online project use cdn. -->
     <script src="COMMON JS FILES-1/MANAGE - FONT AWESOME KIT.js"></script>
-    <link rel="stylesheet" href="CSS FILES - 1/CSS-1 index.css">
+    <!-- MANAGE - LOGO -->
     <link rel="icon" href="MANAGE - LOGO.svg" type="image/x-icon">
+    <!-- COMMON CSS FILES -1 / CSS-1 TopNavigationBar.css -->
+    <link rel="stylesheet" href="COMMON CSS FILES-1/CSS-1 TopNavigationBar.css">
 </head>
+
 <body>
     <header>
         <nav>
+            <div class="LOGO-BOX"></div>
             <a href="index.html">Home</a>
             <a href="HTML-1 PROFILE.html">Profile</a>
             <a href="HTML-2 STUDY.html">Study</a>
@@ -24,4 +29,5 @@
         </nav>
     </header>
 </body>
+
 </html>
