TESTING-1: Created first version of Top Navigation Bar in all power pages.

--- a/HTML-2 STUDY.html
+++ b/HTML-2 STUDY.html
@@ -1,3 +1,4 @@
+<!-- THE HOME PAGE OF MANAGE CREATED ON 31 JULY 2024 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,6 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANAGE &verbar; STUDY</title>
+    <!-- MANAGE - FONT AWESOME KIT -->
+    <!-- <script src="https://kit.fontawesome.com/d618e85155.js" crossorigin="anonymous"></script> -->
+    <!-- This is introduced in TESTING-1 and not to be included in online project, for online project use cdn. -->
+    <script src="COMMON JS FILES-1/MANAGE - FONT AWESOME KIT.js"></script>
+    <!-- MANAGE - LOGO -->
     <link rel="icon" href="MANAGE - LOGO.svg" type="image/x-icon">
     <!-- COMMON CSS FILES -1 / CSS-1 TopNavigationBar.css -->
     <link rel="stylesheet" href="COMMON CSS FILES-1/CSS-1 TopNavigationBar.css">
@@ -12,14 +18,24 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="HTML-1 PROFILE.html">Profile</a>
-            <a href="HTML-2 STUDY.html">Study</a>
-            <a href="HTML-3 DOCUMENTS.html">Documents</a>
-            <a href="HTML-4 PROJECTS.html">Projects</a>
-            <a href="HTML-5 ACCESSIBILITY.html">Accessibility</a>
-        </nav>
+        <div class="TNB-BOX1">
+            <div class="LOGO-BOX"></div>
+        </div>
+
+        <div class="TNB-BOX2">
+            <nav>
+                <a href="index.html"><i class="fa-solid fa-house"></i> &nbsp;&nbsp;Home</a>
+                <a href="HTML-1 PROFILE.html"><i class="fa-solid fa-user"></i> &nbsp;&nbsp;Profile</a>
+                <a href="HTML-2 STUDY.html"><i class="fa-solid fa-book"></i> &nbsp;&nbsp;Study</a>
+                <a href="HTML-3 DOCUMENTS.html"><i class="fa-solid fa-file"></i> &nbsp;&nbsp;Documents</a>
+                <a href="HTML-4 PROJECTS.html"><i class="fa-solid fa-list"></i> &nbsp;&nbsp;Projects</a>
+                <a href="HTML-5 ACCESSIBILITY.html"><i class="fa-solid fa-fire"></i> &nbsp;&nbsp;Accessibility</a>
+            </nav>
+        </div>
+
+        <div class="TNB-BOX3">
+            <button>BLOG</button>
+        </div>
     </header>
 </body>
 
