--- a/index.html
+++ b/index.html
@@ -18,15 +18,24 @@
 
 <body>
     <header>
-        <nav>
+        <div class="TNB-BOX1">
             <div class="LOGO-BOX"></div>
-            <a href="index.html">Home</a>
-            <a href="HTML-1 PROFILE.html">Profile</a>
-            <a href="HTML-2 STUDY.html">Study</a>
-            <a href="HTML-3 DOCUMENTS.html">Documents</a>
-            <a href="HTML-4 PROJECTS.html">Projects</a>
-            <a href="HTML-5 ACCESSIBILITY.html">Accessibility</a>
-        </nav>
+        </div>
+
+        <div class="TNB-BOX2">
+            <nav>
+                <a href="index.html"><i class="fa-solid fa-house"></i> &nbsp;&nbsp;Home</a>
+                <a href="HTML-1 PROFILE.html"><i class="fa-solid fa-user"></i> &nbsp;&nbsp;Profile</a>
+                <a href="HTML-2 STUDY.html"><i class="fa-solid fa-book"></i> &nbsp;&nbsp;Study</a>
+                <a href="HTML-3 DOCUMENTS.html"><i class="fa-solid fa-file"></i> &nbsp;&nbsp;Documents</a>
+                <a href="HTML-4 PROJECTS.html"><i class="fa-solid fa-list"></i> &nbsp;&nbsp;Projects</a>
+                <a href="HTML-5 ACCESSIBILITY.html"><i class="fa-solid fa-fire"></i> &nbsp;&nbsp;Accessibility</a>
+            </nav>
+        </div>
+
+        <div class="TNB-BOX3">
+            <button>BLOG</button>
+        </div>
     </header>
 </body>
 
