--- a/HTML-5 ACCESSIBILITY.html
+++ b/HTML-5 ACCESSIBILITY.html
@@ -6,10 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANAGE &verbar; ACCESSIBILITY</title>
-    <!-- MANAGE - FONT AWESOME KIT -->
-    <!-- <script src="https://kit.fontawesome.com/d618e85155.js" crossorigin="anonymous"></script> -->
-    <!-- This is introduced in TESTING-1 and not to be included in online project, for online project use cdn. -->
-    <script src="COMMON JS FILES-1/MANAGE - FONT AWESOME KIT.js"></script>
     <!-- MANAGE - LOGO -->
     <link rel="icon" href="MANAGE - LOGO.svg" type="image/x-icon">
     <!-- COMMON CSS FILES -1 / CSS-1 TopNavigationBar.css -->
@@ -24,12 +20,12 @@
 
         <div class="TNB-BOX2">
             <nav>
-                <a href="index.html"><i class="fa-solid fa-house"></i> &nbsp;&nbsp;Home</a>
-                <a href="HTML-1 PROFILE.html"><i class="fa-solid fa-user"></i> &nbsp;&nbsp;Profile</a>
-                <a href="HTML-2 STUDY.html"><i class="fa-solid fa-book"></i> &nbsp;&nbsp;Study</a>
-                <a href="HTML-3 DOCUMENTS.html"><i class="fa-solid fa-file"></i> &nbsp;&nbsp;Documents</a>
-                <a href="HTML-4 PROJECTS.html"><i class="fa-solid fa-list"></i> &nbsp;&nbsp;Projects</a>
-                <a href="HTML-5 ACCESSIBILITY.html"><i class="fa-solid fa-fire"></i> &nbsp;&nbsp;Accessibility</a>
+                <a href="index.html"><i class="fas fa-house"></i> &nbsp;&nbsp;Home</a>
+                <a href="HTML-1 PROFILE.html"><i class="fas fa-user"></i> &nbsp;&nbsp;Profile</a>
+                <a href="HTML-2 STUDY.html"><i class="fas fa-book"></i> &nbsp;&nbsp;Study</a>
+                <a href="HTML-3 DOCUMENTS.html"><i class="fas fa-file"></i> &nbsp;&nbsp;Documents</a>
+                <a href="HTML-4 PROJECTS.html"><i class="fas fa-list"></i> &nbsp;&nbsp;Projects</a>
+                <a href="HTML-5 ACCESSIBILITY.html"><i class="fas fa-fire"></i> &nbsp;&nbsp;Accessibility</a>
             </nav>
         </div>
 
